cluster/manifests/promphet/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: promphet
  labels:
    name: promphet
    pod-security.kubernetes.io/enforce: restricted
