cluster/manifests/promphet/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: promphet
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: promphet
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - prometheus/prometheus.prometheus.svc.cluster.local
        - pushgateway/pushgateway.pushgateway.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
